--- a/ourpartners.html
+++ b/ourpartners.html
@@ -23,7 +23,7 @@
                 </div>
                 <div class="eren">
                   <div class="icon">
-                    <a href=""><img src="/assets/Home/Plusgen_white.png" alt="" /></a>
+                    <a href=""><img src="./assets/Home/Plusgen_white.png" alt="" /></a>
                     <div class="menu">
                       <nav>
                         <ul>
@@ -36,7 +36,7 @@
                           <li><a href="">career</a></li>
                           <li><a href="./contactus.html">contact us</a></li>
                           <li>
-                            <a href=""><img src="/assets/Home/Cart.png" alt="" /></a>
+                            <a href=""><img src="./assets/Home/Cart.png" alt="" /></a>
                           </li>
                         </ul>
                       </nav>
@@ -72,17 +72,17 @@
     <section>
             <div class="daemon">
                 <div class="targer">
-                    <img src="/assets/OurPartners/logo_1.png" alt="">
-                    <img src="/assets/OurPartners/logo_8.png" alt="">
-                    <img src="/assets/OurPartners/logo_2.png" alt="">
-                    <img src="/assets/OurPartners/logo_3.png" alt="">
-                    <img src="/assets/OurPartners/logo_4.png" alt="">
-                    <img src="/assets/OurPartners/logo_5.png" alt="">
-                    <img src="/assets/OurPartners/logo_7.png" alt="">
-                    <img src="/assets/OurPartners/logo_6.png" alt="">
-                    <img src="/assets/OurPartners/logo_9.png" alt="">
-                    <img src="/assets/OurPartners/logo_10.png" alt="">
-                    <img src="/assets/OurPartners/logo_11.png" alt="">
+                    <img src="./assets/OurPartners/logo_1.png" alt="">
+                    <img src="./assets/OurPartners/logo_8.png" alt="">
+                    <img src="./assets/OurPartners/logo_2.png" alt="">
+                    <img src="./assets/OurPartners/logo_3.png" alt="">
+                    <img src="./assets/OurPartners/logo_4.png" alt="">
+                    <img src="./assets/OurPartners/logo_5.png" alt="">
+                    <img src="./assets/OurPartners/logo_7.png" alt="">
+                    <img src="./assets/OurPartners/logo_6.png" alt="">
+                    <img src="./assets/OurPartners/logo_9.png" alt="">
+                    <img src="./assets/OurPartners/logo_10.png" alt="">
+                    <img src="./assets/OurPartners/logo_11.png" alt="">
                     <a href="">load more. . .</a>
                 </div>
             </div>
@@ -108,13 +108,13 @@
         <div class="eren">
             <div class="footerr">
               <div class="footer1">
-                <a href=""><img src="/assets/Home/Plusgen.png" alt=""></a>
+                <a href=""><img src="./assets/Home/Plusgen.png" alt=""></a>
                 <h4>Lorem ipsum dolor sit amet consectetur.</h4>
                 <div class="mess">
-                  <a href=""><img src="/assets/Home/052-linkedin.png" alt=""></a>
-                  <a href=""><img src="/assets/Home/025-messenger.png" alt=""></a>
-                  <a href=""><img src="/assets/Home/096-twitter.png" alt=""></a>
-                  <a href=""><img src="/assets/Home/097-twoo.png" alt=""></a>
+                  <a href=""><img src="./assets/Home/052-linkedin.png" alt=""></a>
+                  <a href=""><img src="./assets/Home/025-messenger.png" alt=""></a>
+                  <a href=""><img src="./assets/Home/096-twitter.png" alt=""></a>
+                  <a href=""><img src="./assets/Home/097-twoo.png" alt=""></a>
                 </div>
                 </div>
               <div class="footer2">
