--- a/ourpartners.html
+++ b/ourpartners.html
@@ -23,11 +23,11 @@
                 </div>
                 <div class="eren">
                   <div class="icon">
-                    <a href=""><img src="./assets/Home/Plusgen_white.png" alt="" /></a>
+                    <a href="./index.html"><img src="./assets/Home/Plusgen_white.png" alt="home" /></a>
                     <div class="menu">
                       <nav>
                         <ul>
-                          <li><a href="/">home</a></li>
+                          <li><a href="./index.html">home</a></li>
                           <li><a href="./aboutus.html">about us</a></li>
                           <li><a href="./ourpartners.html">our partners</a></li>
                           <li><a href="./allcat.html">all categories</a></li>
