--- a/allcat.html
+++ b/allcat.html
@@ -24,7 +24,7 @@
             </div>
             <div class="eren">
               <div class="icon">
-                <a href="./index.html"><img src="/assets/Home/Plusgen_white.png" alt="home" /></a>
+                <a href="./index.html"><img src="./assets/Home/Plusgen_white.png" alt="home" /></a>
                 <div class="menu">
                   <nav>
                     <ul>
@@ -259,7 +259,7 @@
                     </div>
                   </div>
                   <div class="tab">
-                      <img src="./assets/AllCategories/Rectangle 62-16.png" alt="">
+                      <img src="./assets/AllCategories/Rectangle 62-16.png" alt="pra">
                       <h5>PRAZOSYNC XL 2.5</h5>
                       <div class="burger">
                         <p>0.88$</p>
