--- a/aboutus.html
+++ b/aboutus.html
@@ -224,7 +224,7 @@
           <div class="eren">
             <div class="footerr">
               <div class="footer1">
-                <a href=""><img src="./assets/Home/Plusgen.png" alt=""></a>
+                <a href="./index.html"><img src="./assets/Home/Plusgen.png" alt="end-logo"></a>
                 <h4>Lorem ipsum dolor sit amet consectetur.</h4>
                 <div class="mess">
                   <a href=""><img src="./assets/Home/052-linkedin.png" alt=""></a>
@@ -235,15 +235,15 @@
                 </div>
               <div class="footer2">
                 <h3>company</h3>
-                <a href="">about us</a>
+                <a href="./aboutus.html">about us</a>
                 <a href="">careers</a>
                 <a href="">blogs</a>
-                <a href="">contact us</a>
+                <a href="./contactus.html">contact us</a>
               </div>
               <div class="footer3">
                 <h3>others</h3>
-                <a href="">All Categories</a>
-                <a href="">Our Partners</a>
+                <a href="./allcat.html">All Categories</a>
+                <a href="./ourpartners.html">Our Partners</a>
                 <a href="">UNIOS</a>
               </div>
               <div class="footer4">
