--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <header>
       <div class="bg">
         <div class="covid">
+          <img class="bgimg" src="/assets/Home/Banner 1.png" alt="">
           <div class="topper">
             <p>
               <strong>
@@ -59,7 +60,7 @@
               </form>
             </div>
             <div class="stack">
-              <img src="./assets/Home/banner_grp.png" alt="" />
+              <img src="./assets/Home/banner_grp.png" alt="" /> <br>
               <span>2,500 people booked medicines order in last 24 hours</span>
             </div>
           </div>
