--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header>
       <div class="bg">
         <div class="covid">
-          <img class="bgimg" src="/assets/Home/Banner 1.png" alt="">
+          <img class="bgimg" src="./assets/Home/Banner 1.png" alt="">
           <div class="topper">
             <p>
               <strong>
@@ -222,6 +222,7 @@
 
     <section>
       <div class="amet">
+        <img class="ban" src="./assets/Home/Rectangle 19294.png" alt="ban">
         <div class="pouch">
             <div class="eren">
                 <div class="luffy">
