--- a/index.html
+++ b/index.html
@@ -41,6 +41,9 @@
                     <li>
                       <a href=""><img src="./assets/Home/Cart.png" alt="" /></a>
                     </li>
+                    <!-- <div class="ham"></div>
+                      <li><i class="fa-solid fa-bars"></i></i></li>
+                    </div> -->
                   </ul>
                 </nav>
               </div>
