--- a/aboutus.html
+++ b/aboutus.html
@@ -11,6 +11,7 @@
     <header>
         <div class="bg1">
           <div class="covid">
+            <img class="bgimg1" src="./assets/About/Rectangle 19290.png" alt="">
             <div class="topper1">
               <p>
                 <strong>
