--- a/ourpartners.html
+++ b/ourpartners.html
@@ -10,6 +10,7 @@
     <header>
         <div class="bg3">
             <div class="covid">
+              <img class="bgimg3" src="/assets/OurPartners/Rectangle 19290.png" alt="">
                 <div class="topper1">
                   <p>
                     <strong>
@@ -95,6 +96,7 @@
                     <div class="chop">
                       <h4>let's Connect</h4>
                       <h5>Lorem ipsum dolor sit amet consectetur.</h5>
+                      <img class="medialong" src="/assets/Home/Rectangle 19294.png" alt="">
                     </div>
                     <div class="nami">
                       <a href="">Get In Touch ></a>
