--- a/ourpartners.html
+++ b/ourpartners.html
@@ -96,7 +96,7 @@
                     <div class="chop">
                       <h4>let's Connect</h4>
                       <h5>Lorem ipsum dolor sit amet consectetur.</h5>
-                      <img class="medialong" src="/assets/Home/Rectangle 19294.png" alt="">
+                      <img class="medialong" src="./assets/Home/Rectangle 19294.png" alt="">
                     </div>
                     <div class="nami">
                       <a href="">Get In Touch ></a>
