--- a/ourpartners.html
+++ b/ourpartners.html
@@ -10,7 +10,7 @@
     <header>
         <div class="bg3">
             <div class="covid">
-              <img class="bgimg3" src="/assets/OurPartners/Rectangle 19290.png" alt="">
+              <img class="bgimg3" src="./assets/OurPartners/Rectangle 19290.png" alt="">
                 <div class="topper1">
                   <p>
                     <strong>
