--- a/contactus.html
+++ b/contactus.html
@@ -10,6 +10,7 @@
     <header>
         <div class="bg2">
             <div class="covid">
+              <img class="bgimg2" src="./assets/ContactUs/Rectangle 19290.png" alt="">
               <div class="topper1">
                 <p>
                   <strong>
