--- a/allcat.html
+++ b/allcat.html
@@ -11,6 +11,7 @@
     <header>
         <div class="bg4">
           <div class="covid">
+            <img class="bgimg4" src="./assets/AllCategories/Rectangle 19290.png" alt="">
             <div class="topper1">
               <p>
                 <strong>
@@ -219,7 +220,7 @@
           <div class="tablets">
               <div class="tablets1">
                   <div class="tab">
-                      <img src=./assets/AllCategories/Rectangle 62-11.png" alt="">
+                      <img src="./assets/AllCategories/Rectangle 62-11.png" alt="">
                       <h5>PRAZOSYNC XL 5</h5>
                       <div class="burger">
                           <p>0.88$</p>
