--- a/index.html
+++ b/index.html
@@ -5,13 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>plusgen home</title>
     <link rel="stylesheet" href="style.css" />
-    <link rel="stylesheet"href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="crossorigin="anonymous"referrerpolicy="no-referrer"/>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
+      integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
   </head>
   <body>
     <header>
       <div class="bg">
         <div class="covid">
-          <img class="bgimg" src="./assets/Home/Banner 1.png" alt="">
+          <img class="bgimg" src="./assets/Home/Banner 1.png" alt="" />
           <div class="topper">
             <p>
               <strong>
@@ -27,27 +33,25 @@
           <div class="eren">
             <div class="icon">
               <a href="./index.html"><img src="./assets/Home/Plusgen_white.png" alt="home" /></a>
-              <div class="menu">
-                <nav>
-                  <ul>
-                    <li><a href="./index.html">home</a></li>
-                    <li><a href="./aboutus.html">about us</a></li>
-                    <li><a href="./ourpartners.html">our partners</a></li>
-                    <li><a href="./allcat.html">all categories</a></li>
-                    <li><a href="">unios</a></li>
-                    <li><a href="">blogs</a></li>
-                    <li><a href="">career</a></li>
-                    <li><a href="./contactus.html">contact us</a></li>
-                    <li>
-                      <a href=""><img src="./assets/Home/Cart.png" alt="" /></a>
-                    </li>
-                    <!-- <div class="ham"></div>
-                      <li><i class="fa-solid fa-bars"></i></i></li>
-                    </div> -->
-                  </ul>
-                </nav>
-              </div>
+            <div class="menu">
+              <nav>
+                <ul>
+                  <li><a href="./index.html">home</a></li>
+                  <li><a href="./aboutus.html">about us</a></li>
+                  <li><a href="./ourpartners.html">our partners</a></li>
+                  <li><a href="./allcat.html">all categories</a></li>
+                  <li><a href="">unios</a></li>
+                  <li><a href="">blogs</a></li>
+                  <li><a href="">career</a></li>
+                  <li><a href="./contactus.html">contact us</a></li>
+                  <li>
+                    <a href=""><img src="./assets/Home/Cart.png" alt="" /></a>
+                  </li>
+                </ul>
+              </nav>
             </div>
+          </div>
+
             <div class="members">
               <p>
                 15000+ empowered individuals working to deliver outstanding
@@ -56,14 +60,19 @@
             </div>
             <div class="search">
               <form action="" target="_self" method="post">
-                <input type="text" name="search"placeholder="Search..."id="search"/>
+                <input
+                  type="text"
+                  name="search"
+                  placeholder="Search..."
+                  id="search"
+                />
                 <div class="but">
                   <button type="submit">SEARCH</button>
                 </div>
               </form>
             </div>
             <div class="stack">
-              <img src="./assets/Home/banner_grp.png" alt="" /> <br>
+              <img src="./assets/Home/banner_grp.png" alt="" /> <br />
               <span>2,500 people booked medicines order in last 24 hours</span>
             </div>
           </div>
@@ -174,70 +183,70 @@
         <div class="flexible">
           <h4>our strategies</h4>
           <h5>Lorem ipsum dolor sit amet consectetur.</h5>
-        </div> 
+        </div>
         <div class="omk">
-        <div class="chat">
-          <div class="support">
-            <div class="zeb">
-              <img src="./assets/Home/Group 7.png" alt="" />
+          <div class="chat">
+            <div class="support">
+              <div class="zeb">
+                <img src="./assets/Home/Group 7.png" alt="" />
+              </div>
+              <div class="ron">
+                <h4>Flexible</h4>
+                <p>
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Urna,
+                  tortor tempus.
+                </p>
+              </div>
             </div>
-            <div class="ron">
-              <h4>Flexible</h4>
-              <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Urna,
-                tortor tempus.
-              </p>
+            <div class="support">
+              <div class="zeb">
+                <img src="./assets/Home/Group 12.png" alt="" />
+              </div>
+              <div class="ron">
+                <h4>Supportive</h4>
+                <p>
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Urna,
+                  tortor tempus.
+                </p>
+              </div>
+            </div>
+            <div class="support">
+              <div class="zeb">
+                <img src="./assets/Home/Group 11.png" alt="" />
+              </div>
+              <div class="ron">
+                <h4>Rewarding</h4>
+                <p>
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Urna,
+                  tortor tempus.
+                </p>
+              </div>
             </div>
           </div>
-          <div class="support">
-            <div class="zeb">
-              <img src="./assets/Home/Group 12.png" alt="" />
-            </div>
-            <div class="ron">
-              <h4>Supportive</h4>
-              <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Urna,
-                tortor tempus.
-              </p>
-            </div>
-          </div>
-          <div class="support">
-            <div class="zeb">
-              <img src="./assets/Home/Group 11.png" alt="" />
-            </div>
-            <div class="ron">
-              <h4>Rewarding</h4>
-              <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Urna,
-                tortor tempus.
-              </p>
-            </div>
-          </div>
-        </div>
-        <div class="popp">
+          <div class="popp">
             <div class="pop1">
-                <img src="./assets/Home/Rectangle 17.png" alt="rec17">
+              <img src="./assets/Home/Rectangle 17.png" alt="rec17" />
             </div>
+          </div>
         </div>
-    </div>
       </div>
     </section>
 
     <section>
       <div class="amet">
-        <img class="ban" src="./assets/Home/Rectangle 19294.png" alt="ban">
+        <img class="ban" src="./assets/Home/Rectangle 19294.png" alt="ban" />
         <div class="pouch">
-            <div class="eren">
-                <div class="luffy">
-                  <div class="chop">
-                    <h4>let's Connect</h4>
-                    <h5>Lorem ipsum dolor sit amet consectetur.</h5>
-                  </div>
-                  <div class="nami">
-                    <a href="">Get In Touch ></a>
-                  </div>
-                </div>
+          <div class="eren">
+            <div class="luffy">
+              <div class="chop">
+                <h4>let's Connect</h4>
+                <h5>Lorem ipsum dolor sit amet consectetur.</h5>
               </div>
+              <div class="nami">
+                <a href="">Get In Touch ></a>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </section>
@@ -255,47 +264,47 @@
             </p>
             <ul>
               <li>
-                <div class="display-flex">    
+                <div class="display-flex">
                   <a href="">Oncology</a><span>&#62;</span>
                 </div>
               </li>
               <li>
-                <div class="display-flex">    
+                <div class="display-flex">
                   <a href="">Vaccines</a><span>&#62;</span>
                 </div>
               </li>
               <li>
-                <div class="display-flex">    
+                <div class="display-flex">
                   <a href="">Infectious diseases</a><span>&#62;</span>
                 </div>
               </li>
               <li>
-                <div class="display-flex">    
+                <div class="display-flex">
                   <a href="">Cardio-metabolic disorders</a><span>&#62;</span>
                 </div>
               </li>
               <li>
-                <div class="display-flex">    
+                <div class="display-flex">
                   <a href="">Discovery & development</a><span>&#62;</span>
                 </div>
+              </li>
             </ul>
           </div>
           <div class="hats">
             <img src="./assets/Home/Illustration.png" alt="Illustration" />
             <div class="lap">
-                <h2>Vaccines</h2>
-                <p>Lorem ipsum dolor sit amet consectetur. Arcu
-                    faucibus vulputate enim pellentesque hac.
-                    Mattis ac scelerisque sed morbi interdum.
-                    Quam in massa purus ac nunc enim. Amet ut
-                    eleifend amet vitae id vitae odio est. Pharetra
-                    sagittis tristique at aliquam in. Feugiat vel duis
-                    lectus feugiat egestas ultrices. Amet vulputate
-                    aliquam sit malesuada eget aliquam aliquam
-                    magna. Nam donec orci libero massa
-                    accumsan non ullamcorper id dictum. Et at
-                    aliquet tempus gravida ultrices. Bibendum nisl
-                    etiam sagittis id gravida.</p>
+              <h2>Vaccines</h2>
+              <p>
+                Lorem ipsum dolor sit amet consectetur. Arcu faucibus vulputate
+                enim pellentesque hac. Mattis ac scelerisque sed morbi interdum.
+                Quam in massa purus ac nunc enim. Amet ut eleifend amet vitae id
+                vitae odio est. Pharetra sagittis tristique at aliquam in.
+                Feugiat vel duis lectus feugiat egestas ultrices. Amet vulputate
+                aliquam sit malesuada eget aliquam aliquam magna. Nam donec orci
+                libero massa accumsan non ullamcorper id dictum. Et at aliquet
+                tempus gravida ultrices. Bibendum nisl etiam sagittis id
+                gravida.
+              </p>
             </div>
           </div>
         </div>
@@ -381,28 +390,29 @@
       <div class="silver">
         <div class="eren">
           <div class="realme">
-            <div class="redmi"> 
+            <div class="redmi">
               <div class="craft">
-              <h3>promotion</h3>
-              <h4>See What Our Clients Say About Us</h4>
-            </div>
-              <div class="wild">
-                <img src="./assets/Home/Testimonial profile.png" alt="">
+                <h3>promotion</h3>
+                <h4>See What Our Clients Say About Us</h4>
               </div>
-              
-                <p class="parag3">"Lorem ipsum dolor sit amet consectetur. Integer fames est
-                  sagittis egestas nunc adipiscing varius pharetra dolor.
-                  Duis neque eget lectus sed. Adipiscing ornare elementum
-                  nibh vulputate dignissim gravida velit. Quis scelerisque
-                  nec vestibulum magna sed turpis turpis pharetra."
-                  <strong>John Doe</strong>
-                </p>
-                  <div class="cirarow">
-                    <i class="fa-solid fa-circle-arrow-left"></i>
-                  </div>
-                  <div class="circarow1">
-                    <i class="fa-solid fa-circle-arrow-right"></i>
-                  </div>
+              <div class="wild">
+                <img src="./assets/Home/Testimonial profile.png" alt="" />
+              </div>
+
+              <p class="parag3">
+                "Lorem ipsum dolor sit amet consectetur. Integer fames est
+                sagittis egestas nunc adipiscing varius pharetra dolor. Duis
+                neque eget lectus sed. Adipiscing ornare elementum nibh
+                vulputate dignissim gravida velit. Quis scelerisque nec
+                vestibulum magna sed turpis turpis pharetra."
+                <strong>John Doe</strong>
+              </p>
+              <div class="cirarow">
+                <i class="fa-solid fa-circle-arrow-left"></i>
+              </div>
+              <div class="circarow1">
+                <i class="fa-solid fa-circle-arrow-right"></i>
+              </div>
             </div>
           </div>
         </div>
@@ -412,15 +422,19 @@
       <div class="eren">
         <div class="footerr">
           <div class="footer1">
-            <a href="./index.html"><img src="./assets/Home/Plusgen.png" alt="end-logo"></a>
+            <a href="./index.html"
+              ><img src="./assets/Home/Plusgen.png" alt="end-logo"
+            /></a>
             <h4>Lorem ipsum dolor sit amet consectetur.</h4>
             <div class="mess">
-              <a href=""><img src="./assets/Home/052-linkedin.png" alt=""></a>
-              <a href=""><img src="./assets/Home/025-messenger.png" alt=""></a>
-              <a href=""><img src="./assets/Home/096-twitter.png" alt=""></a>
-              <a href=""><img src="./assets/Home/097-twoo.png" alt=""></a>
+              <a href=""><img src="./assets/Home/052-linkedin.png" alt="" /></a>
+              <a href=""
+                ><img src="./assets/Home/025-messenger.png" alt=""
+              /></a>
+              <a href=""><img src="./assets/Home/096-twitter.png" alt="" /></a>
+              <a href=""><img src="./assets/Home/097-twoo.png" alt="" /></a>
             </div>
-            </div>
+          </div>
           <div class="footer2">
             <h3>company</h3>
             <a href="./aboutus.html">about us</a>
@@ -437,7 +451,7 @@
           <div class="footer4">
             <span><strong>Join Our Newsletter</strong></span>
             <form action="" target="_self" method="post"></form>
-            <input type="email" placeholder="Your Email adress">
+            <input type="email" placeholder="Your Email adress" />
             <a href=""><button>Subscribe</button></a>
             <p>*will send you weekly updates for your better tour packages*</p>
           </div>
