--- a/aboutus.html
+++ b/aboutus.html
@@ -12,6 +12,11 @@
         <div class="bg1">
           <div class="covid">
             <img class="bgimg1" src="./assets/About/Rectangle 19290.png" alt="">
+            <div class="hamdiv">
+              <div id="ham" class="ham" onclick="mobview()">
+                <i class="fa-solid fa-bars"></i>
+              </div>
+          </div>
             <div class="topper1">
               <p>
                 <strong>
@@ -43,6 +48,31 @@
                     </ul>
                   </nav>
                 </div>
+              </div>
+              <div id="mobview" class="mobileviewport">
+                <div class="mobicon">
+                  <a href="./index.html"><img src="./assets/Home/Plusgen_white.png" alt="home" /></a>
+                  <div class="xmark" onclick="mobx()">
+                    <i class="fa-solid fa-xmark"></i>
+                  </div>
+                <div class="mobmenu">
+                  <nav>
+                    <ul>
+                      <li><a href="./index.html">home</a></li>
+                      <li><a href="./aboutus.html">about us</a></li>
+                      <li><a href="./ourpartners.html">our partners</a></li>
+                      <li><a href="./allcat.html">all categories</a></li>
+                      <li><a href="">unios</a></li>
+                      <li><a href="">blogs</a></li>
+                      <li><a href="">career</a></li>
+                      <li><a href="./contactus.html">contact us</a></li>
+                      <li>
+                        <a href=""><img src="./assets/Home/Cart.png" alt="" /></a>
+                      </li>
+                    </ul>
+                  </nav>
+                </div>
+              </div>
               </div>
               <div class="issues">
                 <h5>home > about us</h5>
@@ -260,5 +290,6 @@
             </div>
           </div>
         </footer>
+        <script src="main.js"></script>
 </body>
 </html>
