--- a/contactus.html
+++ b/contactus.html
@@ -5,12 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>contact us</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet"href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="crossorigin="anonymous"referrerpolicy="no-referrer"/>
 </head>
 <body>
     <header>
         <div class="bg2">
             <div class="covid">
               <img class="bgimg2" src="./assets/ContactUs/Rectangle 19290.png" alt="">
+              <div class="hamdiv">
+                <div id="ham" class="ham" onclick="mobview()">
+                  <i class="fa-solid fa-bars"></i>
+                </div>
+             </div>
               <div class="topper1">
                 <p>
                   <strong>
@@ -42,6 +48,31 @@
                       </ul>
                     </nav>
                   </div>
+                </div>
+                <div id="mobview" class="mobileviewport">
+                  <div class="mobicon">
+                    <a href="./index.html"><img src="./assets/Home/Plusgen_white.png" alt="home" /></a>
+                    <div class="xmark" onclick="mobx()">
+                      <i class="fa-solid fa-xmark"></i>
+                    </div>
+                  <div class="mobmenu">
+                    <nav>
+                      <ul>
+                        <li><a href="./index.html">home</a></li>
+                        <li><a href="./aboutus.html">about us</a></li>
+                        <li><a href="./ourpartners.html">our partners</a></li>
+                        <li><a href="./allcat.html">all categories</a></li>
+                        <li><a href="">unios</a></li>
+                        <li><a href="">blogs</a></li>
+                        <li><a href="">career</a></li>
+                        <li><a href="./contactus.html">contact us</a></li>
+                        <li>
+                          <a href=""><img src="./assets/Home/Cart.png" alt="" /></a>
+                        </li>
+                      </ul>
+                    </nav>
+                  </div>
+                </div>
                 </div>
                 <div class="issues1">
                   <h5>home > contact us</h5>
@@ -149,5 +180,6 @@
             </div>
           </div>
     </footer>
+    <script src="main.js"></script>
 </body>
 </html>
