--- a/index.html
+++ b/index.html
@@ -18,6 +18,11 @@
       <div class="bg">
         <div class="covid">
           <img class="bgimg" src="./assets/Home/Banner 1.png" alt="" />
+          <div class="hamdiv">
+              <div id="ham" class="ham" onclick="mobview()">
+                <i class="fa-solid fa-bars"></i>
+              </div>
+          </div>
           <div class="topper">
             <p>
               <strong>
@@ -50,6 +55,31 @@
                 </ul>
               </nav>
             </div>
+          </div>
+          <div id="mobview" class="mobileviewport">
+            <div class="mobicon">
+              <a href="./index.html"><img src="./assets/Home/Plusgen_white.png" alt="home" /></a>
+              <div class="xmark" onclick="mobx()">
+                <i class="fa-solid fa-xmark"></i>
+              </div>
+            <div class="mobmenu">
+              <nav>
+                <ul>
+                  <li><a href="./index.html">home</a></li>
+                  <li><a href="./aboutus.html">about us</a></li>
+                  <li><a href="./ourpartners.html">our partners</a></li>
+                  <li><a href="./allcat.html">all categories</a></li>
+                  <li><a href="">unios</a></li>
+                  <li><a href="">blogs</a></li>
+                  <li><a href="">career</a></li>
+                  <li><a href="./contactus.html">contact us</a></li>
+                  <li>
+                    <a href=""><img src="./assets/Home/Cart.png" alt="" /></a>
+                  </li>
+                </ul>
+              </nav>
+            </div>
+          </div>
           </div>
 
             <div class="members">
@@ -461,5 +491,6 @@
         </div>
       </div>
     </footer>
+    <script src="main.js"></script>
   </body>
 </html>
